# hpalloc

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  build.sh
benchmarks/: main.cpp
include/hpalloc/: allocator.h  arena.h  fixed_block.h  size_class.h
src/: allocator.cpp  arena.cpp  fixed_block.cpp  size_class.cpp
tests/: arena_test.cpp  fixed_block_test.cpp  size_class_test.cpp
